feat: change response from json to text

--- a/public/html/dashboard.ejs
+++ b/public/html/dashboard.ejs
@@ -21,7 +21,7 @@
             id="loginForm" class="mt-3">
                 <div class="mb-1">
                     <input name="type" value="log" type="hidden" />
-                    <input name="_token" value="<%= JSON.stringify(data) %>" type="hidden" />
+                    <input name="_token" value="<%= data %>" type="hidden" />
                     <label for="loginGrowId" class="block text-white text-xs">GrowID</label>
                     <div class="flex items-center border-2 border-[#81d4fa] rounded bg-[#2b4d6d] px-1 py-1">
                         <i class="fas fa-user text-white mr-1 text-xs"></i>
